# WEB_HW2

assistant/: pyproject.toml
assistant/assistant/: Dockerfile  abstract_classes.py  classes.py  command_parser.py  country_codes.py  error_handl_decorator.py  functions.py  gen_config.py  input_format_verification.py  main.py  main_sorting_files.py  normalize.py  notebook.py  requirements.txt  scan.py  user_config.py
